Fixed some accessibility issues, refactored some files

--- a/app/src/main/res/layout/book_collection_item.xml
+++ b/app/src/main/res/layout/book_collection_item.xml
@@ -100,7 +100,7 @@
                 android:layout_height="wrap_content"
                 style="@style/Widget.AppCompat.RatingBar.Small"
                 android:theme="@style/RatingBar"
-                />
+                android:rating="4.5" />
 
 
             <TextView
