--- a/app/src/main/res/layout/collection_item.xml
+++ b/app/src/main/res/layout/collection_item.xml
@@ -21,10 +21,10 @@
             android:id="@+id/collection_thumbnail_imageview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
             android:contentDescription="@string/content_description_collection_thumbnail"
-            tools:src="@drawable/image_not_available"
-            />
+            android:scaleType="centerCrop"
+            tools:ignore="ImageContrastCheck"
+            tools:src="@drawable/image_not_available" />
 
         <ImageView
             android:id="@+id/collection_visibility_icon"
@@ -34,8 +34,7 @@
             android:layout_marginEnd="20dp"
             android:layout_gravity="top|end"
             android:contentDescription="@string/content_description_collection_visibility"
-            tools:src="@drawable/baseline_lock_outline_24"
-            />
+            tools:src="@drawable/baseline_lock_outline_24" />
 
     </FrameLayout>
 
@@ -48,8 +47,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:text="@string/textview_collection_name_placeholder"
-        />
+        tools:text="@string/textview_collection_name_placeholder" />
 
 
 
