--- a/app/src/main/res/layout/dialog_rename_collection.xml
+++ b/app/src/main/res/layout/dialog_rename_collection.xml
@@ -25,11 +25,11 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:minWidth="380dp"
-            android:maxWidth="460dp"
             android:layout_height="wrap_content"
-            />
+            android:layout_gravity="center"
+            android:maxWidth="460dp"
+            android:minWidth="380dp"
+            tools:ignore="TextContrastCheck" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
