--- a/app/src/main/res/layout/fragment_book_details.xml
+++ b/app/src/main/res/layout/fragment_book_details.xml
@@ -38,11 +38,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="220dp"
                     android:layout_marginBottom="25dp"
+                    android:contentDescription="@string/content_description_background_book"
+                    android:scaleType="centerCrop"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:scaleType="centerCrop"
-                    android:contentDescription="@string/content_description_background_book"
+                    tools:ignore="ImageContrastCheck"
                     tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
 
@@ -54,7 +55,8 @@
                     android:layout_marginTop="80dp"
                     android:contentDescription="@string/content_description_book_cover"
                     android:scaleType="centerCrop"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    tools:ignore="ImageContrastCheck"
+                    tools:src="@drawable/image_not_available" />
 
             </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
@@ -188,7 +190,7 @@
                         android:layout_height="48dp"
                         style="@style/Widget.AppCompat.RatingBar.Indicator"
                         android:theme="@style/RatingBarBookDetails"
-                        />
+                        tools:rating="4" />
 
                     <TextView
                         android:id="@+id/textview_rating"
