--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -59,12 +59,14 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout_username"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:minWidth="320dp"
+        android:maxWidth="380dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@id/profile_image_select_container"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:shapeAppearanceOverlay="@style/RoundedEditText"
         app:errorEnabled="true"
         app:boxStrokeColor="@color/text_input_box_stroke_color"
@@ -93,12 +95,14 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout_bio"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:minWidth="320dp"
+        android:maxWidth="380dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@id/text_input_layout_username"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:shapeAppearanceOverlay="@style/RoundedEditText"
         app:errorEnabled="true"
         app:boxStrokeColor="@color/text_input_box_stroke_color"
@@ -111,10 +115,9 @@
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/baseline_waving_hand_24"
             android:drawablePadding="20dp"
-            android:hint=""
+            android:hint="@string/biography"
             android:inputType="textEmailAddress"
-            android:minHeight="100dp"
-            />
+            android:minHeight="100dp" />
 
         <TextView
             android:id="@+id/settings_bio_error_message"
@@ -129,7 +132,9 @@
 
     <Button
         android:id="@+id/button_confirm_edit"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
+        android:minWidth="240dp"
+        android:maxWidth="360dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="12dp"
@@ -146,7 +151,9 @@
 
     <Button
         android:id="@+id/button_undo_changes"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
+        android:minWidth="240dp"
+        android:maxWidth="360dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
