--- a/app/src/main/res/layout/fragment_edit_sensible.xml
+++ b/app/src/main/res/layout/fragment_edit_sensible.xml
@@ -23,10 +23,14 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/edit_sensible_container_password"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:minWidth="320dp"
+            android:maxWidth="380dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@id/edit_sensible_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:passwordToggleEnabled="true"
             app:shapeAppearanceOverlay="@style/RoundedEditText"
             app:errorEnabled="true"
@@ -56,10 +60,14 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/edit_sensible_container_password_confirm"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:minWidth="320dp"
+            android:maxWidth="380dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@id/edit_sensible_container_password"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:passwordToggleEnabled="true"
             app:shapeAppearanceOverlay="@style/RoundedEditText"
             app:errorEnabled="true"
@@ -89,7 +97,9 @@
 
         <Button
             android:id="@+id/button_confirm_edit"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
+            android:minWidth="240dp"
+            android:maxWidth="360dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="30dp"
@@ -106,7 +116,9 @@
 
         <Button
             android:id="@+id/button_undo_changes"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
+            android:minWidth="240dp"
+            android:maxWidth="360dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="8dp"
