--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -32,16 +32,20 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo" />
+        app:layout_constraintTop_toBottomOf="@id/logo" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout_email"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:minWidth="360dp"
+        android:maxWidth="460dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@+id/textview_login"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:endIconMode="clear_text"
         app:errorTextColor="@color/white"
         app:errorIconTint="@color/white"
@@ -67,12 +71,16 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout_password"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:minWidth="360dp"
+        android:maxWidth="460dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:passwordToggleEnabled="true"
         android:textColorHint="@color/white"
         app:errorTextColor="@color/white"
@@ -98,7 +106,10 @@
 
     <Button
         android:id="@+id/button_login"
-        android:layout_width="0dp"
+        style="@style/Widget.Material3.Button.ElevatedButton"
+        android:layout_width="wrap_content"
+        android:minWidth="300dp"
+        android:maxWidth="320dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
@@ -107,20 +118,22 @@
         android:text="@string/login"
         android:textColor="@color/white"
         android:textSize="14sp"
-        style="@style/Widget.Material3.Button.ElevatedButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password" />
+        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
+        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />
 
 
 
     <Button
         android:id="@+id/button_google_login"
         style="@style/Widget.Material3.Button.ElevatedButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:minWidth="300dp"
+        android:maxWidth="320dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="24dp"
         android:text="@string/google_login"
         android:textColor="@color/google_login_text"
@@ -130,9 +143,8 @@
         app:iconGravity="textStart"
         app:iconTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_login" />
+        app:layout_constraintTop_toBottomOf="@id/button_login" />
 
     <TextView
         android:id="@+id/textview_new_account"
@@ -141,12 +153,10 @@
         android:layout_marginTop="24dp"
         android:text="@string/new_account"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_register"
+        app:layout_constraintEnd_toStartOf="@id/button_register"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_google_login"
-        app:layout_constraintVertical_bias="0.195" />
+        app:layout_constraintTop_toBottomOf="@id/button_google_login" />
 
     <Button
         android:id="@+id/button_register"
@@ -159,7 +169,7 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/textview_new_account"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toEndOf="@+id/textview_new_account"
+        app:layout_constraintStart_toEndOf="@id/textview_new_account"
         app:textAllCaps="false" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
