--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -34,18 +34,22 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/logo" />
+            app:layout_constraintTop_toBottomOf="@id/logo" />
 
 
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_input_layout_email"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:minWidth="360dp"
+            android:maxWidth="460dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/textview_register"
+            app:layout_constraintTop_toBottomOf="@id/textview_register"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:endIconMode="clear_text"
             app:errorTextColor="@color/white"
             app:errorIconTint="@color/white"
@@ -71,12 +75,16 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_input_layout_password"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:minWidth="360dp"
+            android:maxWidth="460dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email"
+            app:layout_constraintTop_toBottomOf="@id/text_input_layout_email"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:passwordToggleEnabled="true"
             android:textColorHint="@color/white"
             app:errorTextColor="@color/white"
@@ -102,12 +110,16 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_input_layout_password_confirm"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:minWidth="360dp"
+            android:maxWidth="460dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password"
+            app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:passwordToggleEnabled="true"
             android:textColorHint="@color/white"
             app:errorTextColor="@color/white"
@@ -134,19 +146,22 @@
 
         <Button
             android:id="@+id/button_confirm_registration"
-            android:layout_width="0dp"
+            style="@style/Widget.Material3.Button.ElevatedButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="24dp"
             android:backgroundTint="?attr/colorPrimaryVariant"
+            android:maxWidth="320dp"
+            android:minWidth="300dp"
             android:text="@string/register"
             android:textColor="@color/white"
             android:textSize="14sp"
-            style="@style/Widget.Material3.Button.ElevatedButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password_confirm" />
+            app:layout_constraintTop_toBottomOf="@id/text_input_layout_password_confirm"
+            tools:ignore="DuplicateSpeakableTextCheck" />
 
         <TextView
             android:id="@+id/textview_already_registered"
