--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -26,13 +26,12 @@
                 android:id="@+id/avatar_image_view"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginEnd="40dp"
                 android:contentDescription="@string/pa_description_photo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:src="@drawable/ic_baseline_profile_24"
-                />
+                tools:ignore="ImageContrastCheck"
+                tools:src="@drawable/avatar1" />
 
             <LinearLayout
                 android:id="@+id/follower_counter_container"
