--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -45,8 +45,7 @@
             app:layout_constraintTop_toBottomOf="@+id/notification_title"
             app:layout_constraintStart_toStartOf="parent"
             android:maxLines="2"
-            android:ellipsize="marquee"
-            />
+            android:ellipsize="marquee" />
 
         <TextView
             android:id="@+id/notification_date"
@@ -75,8 +74,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:visibility="gone"
-        tools:visibility="gone"
-        />
+        tools:visibility="gone" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/unfollow_button"
@@ -96,7 +94,6 @@
         app:layout_constraintTop_toTopOf="parent"
         android:backgroundTint="?attr/colorButtonNormal"
         android:visibility="gone"
-        tools:visibility="visible"
-        />
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
