--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -13,7 +13,7 @@
     <item
         android:id="@+id/nav_switch"
         android:title="@string/theme"
-        app:actionLayout="@layout/custom_switch"
+        app:actionLayout="@layout/custom_theme_switch"
         app:showAsAction="ifRoom"/>
 
     <item
